# portfolio

./: CNAME  Cargo.toml  README.md  UPDATES.md  advances.md  cv.html  cv_standalone.html  gr.html  index.html  script.js  styles.css  translations.js  update_cards.py
.github/workflows/: deploy.yml
src/: main.rs
src/components/: sections.rs
src/config/: mod.rs  templates.rs
src/handlers/: index.rs
src/models/: mod.rs  page_data.rs
src/services/: markdown_service.rs  mod.rs
static/: CAM.pdf:Zone.Identifier  ECCE.pdf:Zone.Identifier  ECPE.pdf:Zone.Identifier  FF2.pdf:Zone.Identifier  GSG19.pdf:Zone.Identifier  GSG24.pdf:Zone.Identifier  Gis_Coastal.png:Zone.Identifier  IMG20240808075229.jpg:Zone.Identifier  IMG_20241111_154823.jpg:Zone.Identifier  Web_Dev.png:Zone.Identifier  army.pdf:Zone.Identifier  army1.pdf:Zone.Identifier  army1.png~RF9b4709.TMP  army2.pdf:Zone.Identifier  astr1.png:Zone.Identifier  athens.csv:Zone.Identifier  compcva.png:Zone.Identifier  copf.png:Zone.Identifier  fire.pdf:Zone.Identifier  pms.jpg:Zone.Identifier  profile.JPG~RF1c1b454.TMP  profile.JPG~RF1d66042.TMP  profile.JPG~RF1d73499.TMP  profile.JPG~RF1d79c1d.TMP  profile.JPG~RF1d813af.TMP  profile.jpg~RF1e2df5b.TMP  profile.jpg~RF225fee3.TMP  profile.jpg~RF2264f65.TMP  profile.jpg~RF22699db.TMP  profile.jpg~RF226ee16.TMP  tau_prev.png:Zone.Identifier
static/content/: Academic_Education.md  Books.md  International_Experiences.md  Languages.md  Movies_Kindness.md  (+8 more)
template/: README.md  index.html  script.js  styles.css  translations.js
templates/: base.html  cv.html  index.html
(+37 files in other folders)
