[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
actix-web = { version = "4.4", features = ["compress-brotli", "compress-gzip"] }
actix-files = "0.6"
tera = { version = "1.19", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markdown = "0.3"
tokio = { version = "1.34", features = ["full"] }
lazy_static = "1.4"
futures = "0.3"
num_cpus = "1.16"
